# keep

./: .gitignore  CMakeLists.txt  alloc.h  build.sh  darray.h
tests/: CMakeLists.txt  test_darray.c
